epic: fixed the top right teaser/date spacing

--- a/sites/all/modules/dosomething/dosomething_campaign_styles/campaign_styles/2012/epic/ds_campaign.sass
+++ b/sites/all/modules/dosomething/dosomething_campaign_styles/campaign_styles/2012/epic/ds_campaign.sass
@@ -525,3 +525,12 @@ div[role="main"]
 img
   +noBorder
   +noBoxShadow
+
+.pane-node-field-campain-date
+  height: 28px
+
+.pane-node-field-campaign-teaser
+  .pane-content
+    padding-bottom: 0px
+    p
+      margin-bottom: 0px
